--- a/UIDesigner/src/main/AndroidManifest.xml
+++ b/UIDesigner/src/main/AndroidManifest.xml
@@ -1,137 +1,44 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     
-    <!-- Root/System Level Permissions -->
+    <!-- Core Permissions for UI Designer Functionality -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" 
-        tools:ignore="ScopedStorage" />
     
     <!-- System UI and Window Management -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     
-    <!-- Device Administration (for IDE-level control) -->
-    <uses-permission android:name="android.permission.DEVICE_POWER" 
-        tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.REBOOT" 
-        tools:ignore="ProtectedPermissions" />
-    
-    <!-- Package Management (for IDE functionality) -->
-    <uses-permission android:name="android.permission.INSTALL_PACKAGES" 
-        tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.DELETE_PACKAGES" 
-        tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
-    
-    <!-- System Process Access -->
-    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
-    <uses-permission android:name="android.permission.GET_TASKS" 
-        tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.REAL_GET_TASKS" 
-        tools:ignore="ProtectedPermissions" />
-    
-    <!-- File System Access -->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" 
-        tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.WRITE_MEDIA_STORAGE" 
-        tools:ignore="ProtectedPermissions" />
-    
-    <!-- Network and Internet (for IDE features) -->
+    <!-- Network Access for IDE Features -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     
-    <!-- Hardware Access -->
+    <!-- Hardware Access for Testing -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.VIBRATE" />
     
-    <!-- Location (for testing location-based apps) -->
+    <!-- Location for Testing Location-Based Apps -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     
-    <!-- Contacts and Phone (for testing) -->
+    <!-- Contacts and Phone for Testing -->
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.CALL_PHONE" />
     
-    <!-- SMS and Messaging (for testing) -->
+    <!-- SMS and Messaging for Testing -->
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     
-    <!-- Calendar (for testing) -->
+    <!-- Calendar for Testing -->
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     
-    <!-- System Settings Access -->
-    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" 
-        tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" 
-        tools:ignore="ProtectedPermissions" />
-    
-    <!-- Debugging and Development -->
-    <uses-permission android:name="android.permission.SET_DEBUG_APP" 
-        tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.DUMP" 
-        tools:ignore="ProtectedPermissions" />
-    
-    <!-- Signature-level permissions for system integration -->
-    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS" 
-        tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.MANAGE_USERS" 
-        tools:ignore="ProtectedPermissions" />
-    
-    <application
-        android:allowBackup="true"
-        android:requestLegacyExternalStorage="true"
-        android:preserveLegacyExternalStorage="true"
-        tools:targetApi="31">
-        
-        <!-- Splash Screen Activity - Entry Point -->
-        <activity
-            android:name=".ui.SplashActivity"
-            android:exported="false"
-            android:theme="@style/Theme.UIDesigner.Splash"
-            android:screenOrientation="landscape"
-            android:launchMode="singleTop"
-            android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustResize" />
-        
-        <!-- Main UI Designer Activity - Module MainActivity -->
-        <activity
-            android:name=".ui.UIDesignerActivity"
-            android:exported="false"
-            android:theme="@style/Theme.UIDesigner"
-            android:screenOrientation="landscape"
-            android:launchMode="singleTop"
-            android:parentActivityName=".ui.SplashActivity"
-            android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustResize"
-            android:configChanges="orientation|screenSize|keyboardHidden" />
-        
-        <!-- File Provider for sharing generated files -->
-        <provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="${applicationId}.fileprovider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths" />
-        </provider>
-        
-        <!-- Service for background operations -->
-        <service
-            android:name=".service.UIDesignerService"
-            android:enabled="true"
-            android:exported="false" />
-        
-    </application>
+    <!-- Package Management -->
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
     
 </manifest>
